--- a/src/typography.css
+++ b/src/typography.css
@@ -11,8 +11,8 @@ body {
 }
 
 .title {
-  font-weight: 700;
-  font-size: 14px;
+  font-weight: 500;
+  font-size: 20px;
   line-height: 18px;
 }
 
@@ -23,9 +23,33 @@ body {
 }
 
 .text-md {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 18px;
+}
+
+.text-rg {
   font-weight: 400;
   font-size: 15px;
   line-height: 18px;
+}
+
+.text-caption-md {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+}
+
+.text-caption-rg {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+}
+
+.text-caption-sm {
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 8px;
 }
 
 .text-rg-bd {
