--- a/src/typography.css
+++ b/src/typography.css
@@ -16,20 +16,8 @@ body {
   line-height: 18px;
 }
 
-.text-lg {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
-}
-
 .text-md {
   font-weight: 500;
-  font-size: 15px;
-  line-height: 18px;
-}
-
-.text-rg {
-  font-weight: 400;
   font-size: 15px;
   line-height: 18px;
 }
@@ -44,18 +32,13 @@ body {
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
+  color: rgba(148, 163, 184, 1);
 }
 
 .text-caption-sm {
   font-weight: 400;
   font-size: 8px;
   line-height: 8px;
-}
-
-.text-rg-bd {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 18px;
 }
 
 span,
@@ -65,13 +48,7 @@ div,
 input,
 .text-rg {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-}
-
-.caption {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 12px;
+  font-size: 15px;
+  line-height: 18px;
 }
 
